--- a/src/Beer.API/appsettings.json
+++ b/src/Beer.API/appsettings.json
@@ -10,8 +10,11 @@
   "AllowedHosts": "*",
   
   "DatabaseSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "BeerDb",
-    "CollectionName": "Beers"
+    "CollectionName": "Beers",
+    "Host": "localhost",
+    "Port": 27017,
+    "User": "",
+    "Password": ""
   }
 }
