Created User.API K8s' manifests. Reworked formation of  the connection string

--- a/src/User.API/appsettings.json
+++ b/src/User.API/appsettings.json
@@ -7,8 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-  
-  "ConnectionStrings": {
-    "AppDbContext": "Server=localhost,1433;Initial Catalog=usersdb;User ID=;Password="
+
+  "DatabaseSettings": {
+    "Server": "localhost,1433",
+    "Catalog": "usersdb",
+    "UserId": "",
+    "Password": ""
   }
 }
