--- a/src/User.Infrastructure/User.Infrastructure.csproj
+++ b/src/User.Infrastructure/User.Infrastructure.csproj
@@ -12,6 +12,7 @@
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
